fix: Fixed page header overlaps in-page anchors

--- a/app/less/base.less
+++ b/app/less/base.less
@@ -55,6 +55,10 @@
   .box-sizing();
 }
 
+html {
+  scroll-padding-top: 90px; /* height of sticky header */
+}
+
 body {
   font-family: 'Lato', arial, sans-serif;
   color: @text-color;
